--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div class="container">
-        <img src="/img/eidos.png" alt="logo Eidos"/>
+        <img src="img/eidos.png" alt="logo Eidos"/>
         <nav>
           <a href="#inicio">Inicio</a>
           <a href="#contacto">Contacto</a>
