--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <section id="inicio">
         <div class="logo">
-          <img src="/img/foto2.png" alt="Desarrollador web"/>
+          <img src="img/foto2.png" alt="Desarrollador web"/>
         </div>
         <div class="info">
           <h1>Hola, Soy Kelly Cazorla</h1>
@@ -44,7 +44,7 @@
             que cuenta con tanto auge, dado que se ha convertido es una de las
             bases del éxito de cualquier negocio, sin importar a qué se dedique.
           </p>
-          <a href="/cvkellycazorla.pdf" target="_blank">
+          <a href="cvkellycazorla.pdf" target="_blank">
             <button>Descargar mi CV</button></a>
         </div>
       </section>
@@ -62,11 +62,11 @@
         <br/>
         <div class="redes">
           <a href="mailto:kellyacazorla@gmail.com">
-            <img src="/img/mail.png"/> </a>
+            <img src="img/mail.png"/> </a>
           <a href="https://github.com/kellycazorla" target="_blank"> 
-            <img src="/img/github.png" alt="GitHub"/> </a>
+            <img src="img/github.png" alt="GitHub"/> </a>
           <a href="https://www.linkedin.com/in/kelly-cazorla-517339180/"> 
-            <img src="/img/linkedin.png" alt="LinkedIn"/> </a>
+            <img src="img/linkedin.png" alt="LinkedIn"/> </a>
         </div>
       </section>
     </main>
